@@ -1,3 +1,6 @@
+2012-10-02 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added fe_users logo on datastore signle view.
+
 2012-10-01 Tsi YANG <tsi@in-cite.net>
 	* Feature: Added "attachment" property on file download.
 
